# Mutual-Funds

./: ARCHITECTURE.md  CMakeLists.txt  README.md
src/: main.cpp
src/Core/: Enums.h  FundManager.cpp  FundManager.h  Investment.cpp  Investment.h  Investor.cpp  Investor.h  MutualFund.cpp  MutualFund.h  Portfolio.cpp  Portfolio.h  Snapshot.cpp  Snapshot.h  Transaction.cpp  Transaction.h
src/Data/: DataPersistence.h  FilePersistence.cpp  FilePersistence.h
src/GUI/: DashboardScreen.cpp  DashboardScreen.h  GUIManager.cpp  GUIManager.h  LoginScreen.cpp  LoginScreen.h  MarketScreen.cpp  MarketScreen.h  PerformanceScreen.cpp  PerformanceScreen.h  PortfolioScreen.cpp  PortfolioScreen.h  Screen.cpp  Screen.h  SettingsScreen.cpp  SettingsScreen.h  TradeScreen.cpp  TradeScreen.h
src/Utils/: Button.cpp  Button.h  ChartRenderer.cpp  ChartRenderer.h  ColorScheme.h  Panel.cpp  Panel.h  TextBox.cpp  TextBox.h
